--- a/Bookflix.html
+++ b/Bookflix.html
@@ -15,7 +15,7 @@
 <table>
     <tr>
         <td>
-            <img src="c:\Users\koitjarv\Desktop\kodutööd\sissejuhatus erialasse\veebileht\parasite.jpg" width="175" height="250" alt="Parasite">
+            <img src="https://m.media-amazon.com/images/M/MV5BYjk1Y2U4MjQtY2ZiNS00OWQyLWI3MmYtZWUwNmRjYWRiNWNhXkEyXkFqcGc@._V1_.jpg" width="175" height="250" alt="Parasite">
         </td>
         <td>
             <p>"Parasiit" (originaalpealkiri: Parasite) on 2019. aasta Lõuna-Korea film, mille on loonud režissöör Bong Joon-ho. Film kuulub mitmesse žanrisse, sealhulgas must komöödia, thriller ja drama.
