--- a/bookflix.html
+++ b/bookflix.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>BOOKFLIX</title>
+</head>
+<body>
+    <h1>BOOKFLIX</h1>
+    <p>Siin lehel saad tutvuda parimate filmide ja raamatutega, mis viimase viie aasta jooksul on ilmunud</p>
+    <br>
+    <button class="btn raamatud">Raamatud</button>
+    <button class="btn filmid">Filmid</button>
+    <br>
+    <div class="alaosa">
+        <h2>Lisalingid</h2>
+        <p>Siin on veel linke, kus saad tutvuda sarnaste edetabelite ja kriitikalehekülgedega:</p>
+        <br>
+        <h3>Filmid:</h3>
+        <p><a href="https://www.rottentomatoes.com" target="_blank">RottenTomatoes</a></p>
+        <p><a href="https://www.imdb.com" target="_blank">IMDb</a></p>
+        <br>
+        <h3>Raamatud:</h3>
+        <p><a href="https://www.goodreads.com/" target="_blank">GoodReads</a></p>
+    
+    
+    </div>
 
+</body>
+</html>
