--- a/bookflix.html
+++ b/bookflix.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>BOOKFLIX</h1>
-    <p class="kirjeldus">Siin lehel saad tutvuda parimate filmide ja raamatutega, mis viimase viie aasta jooksul on ilmunud.</p>
+    <p class="kirjeldus">Siin lehel saad tutvuda parimate raamatute ja filmidega, mis viimasel ajal on ilmunud.</p>
     
     <div class="buttons">
         <a href="raamatud.html" class="button" id="raamatud">
@@ -19,7 +19,6 @@
     </div>
 
     <div class="alaosa">
-        <h2>Lisalingid</h2>
         <p>Siin on veel linke, kus saad tutvuda erinevate kriitikalehekülgedega:</p>  
         
         <h3>Filmid:</h3>
