--- a/filmid.html
+++ b/filmid.html
@@ -1,55 +1,252 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="test.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="filmid.css">
     <title>TOP 10 filmi</title>
 </head>
 
 <body>
 
-<h1>TOP 10 Filmi (2020-2024)</h1>
-Allpool on 10 kõige kõrgema ratinguga filmi viimase 5 aasta jooksul.
+<h1>TOP 10 Filmi 2020-2024</h1>
+<br>
+<h3>Allpool on 10 kõige kõrgema hinnanguga filmi vahemikus 2020-2024.</h3>
 <br>
 <br>
-Tutvu ise ka listiga:<br><a href="https://www.imdb.com/chart/top/?year=2019%2C2024&sort=rank%2Casc" target="_blank">IMDb Top 250 Movies</a>
 <br>
-<br>
-<h2>1. Spider-Man: Across the Spider-Verse</h2>
-<table>
-    <tr>
-        <td>
-            <p>
-                Režissöör: Joaquim Dos Santos, Kemp Powers, Justin K. Thompson <br>
-                Aasta: 2023 <br>
-                Žanr: animatsioon <br>
-                Koondhinne: 8.9 <br>
-                Lühikirjeldus: Film järgib Miles Moralesi teekonda, kui ta kohtub erinevate Ämblikmeestega erinevatest multiversumitest. Kui multiversum on ohus, peavad nad üheskoos seisma vastu uuele vaenlasele ja leidma viisi, kuidas kaitsta oma maailmu. Filmis uuritakse identiteedi ja vastutuse teemasid ning rõhutatakse koostöö tähtsust, kui nad astuvad vastu väljakutsetele, mis ületavad nende individuaalsed võimed. <br>
-                IMDb: 8.6 <br>
-                RottenTomatoes: 9.5 <br>
-                Metacritic: 8.6 <br>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/shW9i6k8cB0?si=lueBSjOUahigX5vF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
-
-            </p>
-        </td>
-        <td>
-            <img src="https://cdn.marvel.com/content/1x/across_the_spider-verse.jpg" width="450" height="525" alt="Spider-Man Across the Spider-Verse">
-        </td>
-    </tr>
-</table>
-<table border="1">
-    <tr>
-        <th>IMDb</th>
-        <th>RottenTomatoes</th>
-        <th>Metacritic</th>
-    </tr>
-    <tr>
-        <td>8.5</td>
-        <td>9.9</td>
-        <td>9.7</td>
-    </tr>
-</table>
 <br>
 
+<div class="esimene">
+    <h2>10. Soul</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Pete Docter, Kemp Powers <br>
+                    <strong>Aasta:</strong> 2020 <br>
+                    <strong>Žanr:</strong> animatsioon, seiklus, draama, muusikal <br>
+                    <strong>Koondhinne:</strong> 8.75 <br>
+                    <strong>Lühikirjeldus:</strong> Film räägib Joe Gardnerist - muusikaõpetajast, kelle unistus saada suureks jazz-pianistiks saab ootamatu pöörde, kui ta satub teispoolsusesse peale õnnetust. Seal alustab ta teekonda, et mõista elu tõelist tähendust ja õppida, kuidas iga hetk on väärtuslik. Filmi keskmes on elu, kirg, eneseteostus ja hingelise tasakaalu leidmine. <br>
+                    <strong>IMDb:</strong> 8.0 <br>
+                    <strong>RottenTomatoes:</strong> 9.5 <br>
+                    <iframe width="610" height="365" src="https://www.youtube.com/embed/xOsLIiBStEs?si=tWB4v1Pou6Np3VHH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
 
+                </p>
+            </td>
+            <td>
+                <img src="https://image.tmdb.org/t/p/original/hm58Jw4Lw8OIeECIq5qyPYhAeRJ.jpg" width="450" height="545" alt="Soul">
+            </td>
+        </tr>
+    </table>
+</div>
+
+<div class='teine'>
+    <h2>9. Spider-Man: No Way Home</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Jon Watts <br>
+                    <strong>Aasta:</strong> 2021 <br>
+                    <strong>Žanr:</strong> märul, seiklus, ulme, draama <br>
+                    <strong>Koondhinne:</strong> 8.75 <br>
+                    <strong>Lühikirjeldus:</strong> Marveli superkangelasefilmi „Spider-Man“ seeria kolmas osa, kus Peter Parker peab tegelema oma identiteedi avalikustamise tagajärgedega. Otsides abi Dr. Strange'ilt, et kustutada kogu maailma inimeste mälu tema superkangelaseks olemisest, ajab Peter kogemata lahti multiversumi lõhe, mis toob kokku mitmed erinevad versioonid Spider-Manist ja tema vaenlastest läbi erinevate maailmade. Film viib vaatajad põnevasse ja emotsionaalsesse seiklusesse, kus minevik ja tulevik põimuvad, andes Peterile võimaluse õppida, mis tähendab olla kangelane. <br>
+                    <strong>IMDb:</strong> 8.2 <br>
+                    <strong>RottenTomatoes:</strong> 9.3 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/JfVOs4VSpmA?si=RhgGXBa0XIXQfiru" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://m.media-amazon.com/images/M/MV5BMmFiZGZjMmEtMTA0Ni00MzA2LTljMTYtZGI2MGJmZWYzZTQ2XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" width="450" height="525" alt="Spider-Man: No Way Home">
+            </td>
+        </tr>
+    </table>
+</div>
+<div class="esimene">
+    <h2>8. The Holdovers</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Alexander Payne <br>
+                    <strong>Aasta:</strong> 2023 <br>
+                    <strong>Žanr:</strong> komöödia, draama <br>
+                    <strong>Koondhinne:</strong> 8.8 <br>
+                    <strong>Lühikirjeldus:</strong> Film leiab aset 1970. aastate Ameerikas, kui õpetaja Paul Hunham ja tema osad õpilased, kes ei ole talvepuhkusele läinud, jäävad kooli talvevaheajaks. Koos veedavad nad aega tühjas koolimajas, mis toob esile igasuguseid huvitavaid ja emotsionaalseid hetki. Film uurib inimsuhete keerukust, üksindust ja ootamatute sõpruste tekkimist, pakkudes sooja ja naljakat lugu, mis liigutab ja lõbustab. <br>
+                    <strong>IMDb:</strong> 7.9 <br>
+                    <strong>RottenTomatoes:</strong> 9.7 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/AhKLpJmHhIg?si=7FwseuMH7ZluhJbF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://m.media-amazon.com/images/M/MV5BOWY3MjUzZTctOTI5ZC00MDA5LTk4ZTMtZWJjNjRmMzE4ZmI2XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" width="450" height="525" alt="The Holdovers">
+            </td>
+        </tr>
+    </table>
+</div>
+<div class="teine">
+    <h2>7. Oppenheimer</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Christopher Nolan <br>
+                    <strong>Aasta:</strong> 2020 <br>
+                    <strong>Žanr:</strong> ajalooline draama, biograafiline draama <br>
+                    <strong>Koondhinne:</strong> 8.8 <br>
+                    <strong>Lühikirjeldus:</strong> Tõsielul põhinev film J. Robert Oppenheimerist, Ameerika teadlasest, kes juhtis Manhattan Projekti, mille käigus loodi esimene aatompomm. Film käsitleb Oppenheimeri sisemisi ja moraalseid dilemmasid, kui ta seisab silmitsi oma teadusavastuse ja selle võimalike globaalsete tagajärgedega. „Oppenheimer“ uurib teaduse, vastutuse ja inimese eetilisi valikuid sõja ajal, rääkides põnevat ja emotsionaalset lugu maailmamuutvast teadlasest. <br>
+                    <strong>IMDb:</strong> 8.3 <br>
+                    <strong>RottenTomatoes:</strong> 9.3 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/uYPbbksJxIg?si=gkEqWtU14Ulfw8Un" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://m.media-amazon.com/images/M/MV5BN2JkMDc5MGQtZjg3YS00NmFiLWIyZmQtZTJmNTM5MjVmYTQ4XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" width="450" height="525" alt="Oppenheimer">
+            </td>
+        </tr>
+    </table>
+</div>
+<div class="esimene">
+    <h2>6. Dune: Part Two</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Denis Villeneuve <br>
+                    <strong>Aasta:</strong> 2024 <br>
+                    <strong>Žanr:</strong> ulme, seiklus, draama, märul <br>
+                    <strong>Koondhinne:</strong> 8.85 <br>
+                    <strong>Lühikirjeldus:</strong> Film jätkab Paul Atreidesi teekonda kui too liitub Fremenite hõimuga ja valmistub võitluseks, et taastada oma perekonna au ja saada valitsejaks. Samuti sukeldub film Pauli sisemisse konfliktidesse tema saatuse ja võimu üle, mis ohustab teda ja kogu inimkonda. „Dune: Part Two“ on visuaalselt hingemattev ja intrigeeriv jätk, mis süvendab poliitilisi intriige. <br>
+                    <strong>IMDb:</strong> 8.5 <br>
+                    <strong>RottenTomatoes:</strong> 9.2 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/U2Qp5pL3ovA?si=YcRPrOWM32NNaaBu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://m.media-amazon.com/images/M/MV5BY2Q2MGYyZjItMjE0Yi00NmYxLWJhZTAtNjcyYTY1MGM1ZGIzXkEyXkFqcGc@._V1_.jpg" width="450" height="525" alt="Dune: Part Two">
+            </td>
+        </tr>
+    </table>
+</div>
+<div class="teine">
+    <h2>5. Top Gun: Maverick</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Joseph Kosinski <br>
+                    <strong>Aasta:</strong> 2022 <br>
+                    <strong>Žanr:</strong> seiklus, märul, draama <br>
+                    <strong>Koondhinne:</strong> 8.9 <br>
+                    <strong>Lühikirjeldus:</strong> Film jätkab 1986. aasta klassikalise filmi Top Gun lugu. Peategelane, Pete „Maverick“ Mitchell, on nüüdseks kogenud lennuõpetaja, kes kutsutakse tagasi kooli, et koolitada järgmise põlvkonna pilootide eliiti. Samuti peab ta silmitsi seisma oma mineviku varjude ja noore piloodi, Bradley „Rooster“ Bradshawga, suhtega, kes on seotud tema kadunud sõbra Goose-iga. Film on täis põnevaid lennustseene ja emotsionaalseid hetki, pakkudes adrenaliinirohket ja südamlikku lugu sõprusest, kaotusest ja eneseületusest. <br>
+                    <strong>IMDb:</strong> 8.2 <br>
+                    <strong>RottenTomatoes:</strong> 9.6 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/g4U4BQW9OEk?si=2umb5ET_mrLv82OR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://m.media-amazon.com/images/M/MV5BNDI2MDYxMzgtYjU3OS00MTBjLTk5OTUtNzc2NzI3MTI3NTFjXkEyXkFqcGc@._V1_.jpg" width="450" height="525" alt="Top Gun: Maverick">
+            </td>
+        </tr>
+    </table>
+</div>
+<div class="esimene">
+    <h2>4. The Father</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Florian Zeller <br>
+                    <strong>Aasta:</strong> 2020 <br>
+                    <strong>Žanr:</strong> draama <br>
+                    <strong>Koondhinne:</strong> 9.0 <br>
+                    <strong>Lühikirjeldus:</strong> Film räägib loo vanast mehest Anthonyst, kelle elu keerleb ümber mälukaotuse ja segaste reaalsuste. Kui tema tütar püüab teda aidata leida sobiv hooldaja, hakkab Anthony kahtlema oma kodu ja inimeste olemasolus, kes tema ümber viibivad. Film annab sügava ja intiimse pilgu vananemise ja dementsuse keerukatesse emotsioonidesse, pakkudes ainulaadset kogemust vaatajale, kes näeb sündmusi läbi Anthony vaatepunkti. Anthony lugu toob meile uskumatu ja võimsa portree sellest haigusest ja selle mõjust pereliikmete elule. <br>
+                    <strong>IMDb:</strong> 8.2 <br>
+                    <strong>RottenTomatoes:</strong> 9.8 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4TZb7YfK-JI?si=C0bD6Mx8VHenfYsd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://m.media-amazon.com/images/M/MV5BYzUxMDAyMDAtNzIyZi00OGQ1LTllMjEtYzRjOThkZTUxNTliXkEyXkFqcGc@._V1_.jpg" width="450" height="525" alt="The Father">
+            </td>
+        </tr>
+    </table>
+</div>
+<div class="teine">
+    <h2>3. The Wild Robot</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Chris Sanders <br>
+                    <strong>Aasta:</strong> 2024 <br>
+                    <strong>Žanr:</strong> animatsioon <br>
+                    <strong>Koondhinne:</strong> 9.05 <br>
+                    <strong>Lühikirjeldus:</strong> Film räägib robotist Rozist, kes ärkab üksi mahajäetud saarel pärast teda transportiva laeva hävingut. Kui ta hakkab saare loodusega tutvuma, saab temast juhuslikult osa kohalike loomade maailmast. Filmi keskmes on Rozi tee ellujäämise, eneseteostuse ja sõpruse poole, kui ta püüab mõista oma olemust ning suhteid looduse ja elusolenditega. „The Wild Robot“ toob esile südamliku loo empaatiast ning tehnoloogia ja looduse tasakaalu otsimisest. <br>
+                    <strong>IMDb:</strong> 8.3 <br>
+                    <strong>RottenTomatoes:</strong> 9.8 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/67vbA5ZJdKQ?si=28L-wqyf-4JGqUcK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://m.media-amazon.com/images/M/MV5BZWNiZjVlZTUtNGUwYi00MjJmLTg2MDctNWEzYTJiMzY1ODc4XkEyXkFqcGc@._V1_QL75_UX480_.jpg" width="450" height="525" alt="The Wild Robot">
+            </td>
+        </tr>
+    </table>
+</div>
+<div class="esimene">
+    <h2>2. Hamilton</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Thomas Kail <br>
+                    <strong>Aasta:</strong> 2020 <br>
+                    <strong>Žanr:</strong> muusikal <br>
+                    <strong>Koondhinne:</strong> 9.05 <br>
+                    <strong>Lühikirjeldus:</strong> Filmiversioon Lin-Manuel Mirandast loodud Broadway muusikalist, mis räägib Ameerika revolutsioonilise liidri ja Ameerika Ühendriikide esimese rahandusministri Alexander Hamiltoni elust. Muusikal ühendab ajalooga modernse hip-hopi, R&B ja Broadway muusika, luues dünaamilise ja energilise portree Hamiltoni tõusust vaesusest USA poliitika tipptasemele, samal ajal käsitledes teemasid nagu vabadus, identiteet ja ambitsioon. Filmi lavastus on tehtud originaal Broadway etendusest, kus peategelast mängib Lin-Manuel Miranda ise, pakkudes vaatajatele unikaalse ja kaasahaarava vaate Ameerika ajaloo ühe tähtsaima figuuri elule. <br>
+                    <strong>IMDb:</strong> 8.3 <br>
+                    <strong>RottenTomatoes:</strong> 9.8 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/DSCKfXpAGHc?si=nWAikwTDQNN2z9Qe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://m.media-amazon.com/images/M/MV5BYzBhOWY4ZTktMjE2NS00ZGIyLWJkOGMtNDQyN2JjZWFiODdiXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" width="450" height="525" alt="Hamilton">
+            </td>
+        </tr>
+    </table>
+</div>
+<div class="teine">
+    <h2>1. Spider-Man: Across the Spider-Verse</h2>
+    <table>
+        <tr>
+            <td>
+                <p>
+                    <strong>Režissöör:</strong> Joaquim Dos Santos, Kemp Powers, Justin K. Thompson <br>
+                    <strong>Aasta:</strong> 2023 <br>
+                    <strong>Žanr:</strong> animatsioon <br>
+                    <strong>Koondhinne:</strong> 9.05 <br>
+                    <strong>Lühikirjeldus:</strong> Film jälgib Miles Moralesi teekonda, kui ta kohtub erinevate Ämblikmeestega erinevatest multiversumitest. Kui multiversum on ohus, peavad nad üheskoos seisma vastu uuele vaenlasele ja leidma viisi, kuidas kaitsta oma universumeid. Filmis uuritakse identiteedi ja vastutuse teemasid ning rõhutatakse koostöö tähtsust, kui nad astuvad vastu väljakutsetele, mis ületavad nende individuaalsed võimed. <br>
+                    <strong>IMDb:</strong> 8.6 <br>
+                    <strong>RottenTomatoes:</strong> 9.5 <br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/shW9i6k8cB0?si=lueBSjOUahigX5vF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+
+                </p>
+            </td>
+            <td>
+                <img src="https://cdn.marvel.com/content/1x/across_the_spider-verse.jpg" width="450" height="525" alt="Spider-Man Across the Spider-Verse">
+            </td>
+        </tr>
+    </table>
+</div>
+<br>
 </body>
 </html>
