--- a/bookflix.html
+++ b/bookflix.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="et">
 <head>
     <meta charset="UTF-8">
     <title>BOOKFLIX</title>
@@ -19,10 +19,10 @@
 
     <div class="buttons">
         <a href="raamatud.html" class="button" id="raamatud">
-            <img src="https://cdn-icons-png.flaticon.com/512/207/207114.png" alt="Raamat" />
+            <img src="https://cdn-icons-png.flaticon.com/512/207/207114.png" alt="Raamat">
         </a>
         <a href="filmid.html" class="button" id="filmid">
-            <img src="https://cdn-icons-png.flaticon.com/512/3820/3820565.png" alt="Film" />
+            <img src="https://cdn-icons-png.flaticon.com/512/3820/3820565.png" alt="Film">
         </a>
     </div>
 
