--- a/bookflix.html
+++ b/bookflix.html
@@ -13,8 +13,7 @@
     <div class="kirjeldus-container">
         <p class="kirjeldus"><strong>Siin lehel saad tutvuda parimate raamatute ja filmidega, mis viimasel ajal on ilmunud.
             <br>
-            Vajuta raamatu või popkorni ikoonile, et tutvuda meie loodud edetabelitega!
-        </p></strong>
+            Vajuta raamatu või popkorni ikoonile, et tutvuda meie loodud edetabelitega!</strong></p>
     </div>
 
     <div class="buttons">
