--- a/bookflix.html
+++ b/bookflix.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BOOKFLIX</title>
+    <link rel="stylesheet" href="ühine.css">
     <link rel="stylesheet" href="pealeht.css">
     <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
