--- a/filmid.html
+++ b/filmid.html
@@ -2,12 +2,13 @@
 <html lang="et">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="filmid.css">
     <title>TOP 10 filmi</title>
 </head>
 
 <body>
-
+<button id="themeSwitcher">Dark/Light Mode</button>
 <h1>TOP 10 Filmi 2020-2024</h1>
 <br>
 <h3>Allpool on 10 kõige kõrgema hinnanguga filmi vahemikus 2020-2024.</h3>
@@ -234,6 +235,7 @@
         </tr>
     </table>
 </div>
+<script src="script.js"></script>
 <br>
 </body>
 </html>
