--- a/pealeht.html
+++ b/pealeht.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="pealeht.css">
     <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <script src="tsitaadid.js" defer></script>
+    <script src="pealeht_tsitaadid.js" defer></script>
 </head>
 <body onload="writeRandomQuote()">
 
