--- a/raamatud.html
+++ b/raamatud.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<button id="themeSwitcher">tume režiim</button>
 <h1>TOP 10 Raamatut 2020-2024</h1>
 
 <section class="book-section">
@@ -206,5 +207,6 @@
     </div>
 </section>
 
+<script src="raamatud.js"></script>
 </body>
 </html>
