ikoon raamatu vahelehele

--- a/raamatud.html
+++ b/raamatud.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"> <!-- Tähestik, mida kasutame -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="raamatud.css"> <!-- Ühendus CSS-i ja meie veebilehe vahel -->
+    <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <title>TOP 10 Raamatut</title> <!-- Veebilehe pealkiri -->
 </head>
 
