ilma kommentaariteta raamatud.html

--- a/raamatud.html
+++ b/raamatud.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"> <!-- Tähestik, mida kasutame -->
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="raamatud.css"> <!-- Ühendus CSS-i ja meie veebilehe vahel -->
-    <link rel="icon" href="logo.jpeg" type="image/jpeg">
-    <title>TOP 10 Raamatut</title> <!-- Veebilehe pealkiri -->
+    <link rel="stylesheet" type="text/css" href="raamatud.css"> 
+    <title>TOP 10 Raamatut</title> 
 </head>
 
 <body>
