--- a/filmid.html
+++ b/filmid.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="filmid.css">
     <link rel="icon" href="logo.jpeg" type="image/jpeg">
-    <title>TOP 10 filmi</title>
+    <title>TOP 10 Filmi</title>
 </head>
 
 <body>
