--- a/filmid.html
+++ b/filmid.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="ühine.css">
     <link rel="stylesheet" href="filmid.css">
     <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <title>TOP 10 Filmi</title>
