ühise css arendus

--- a/filmid.html
+++ b/filmid.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <button id="themeSwitcher">tume režiim</button>
+    <button id="themeSwitcher">Tume režiim</button>
     <h1>TOP 10 Filmi 2020-2024</h1>
     <br>
     <h3>Allpool on 10 kõige kõrgema hinnanguga filmi vahemikus 2020-2024.</h3>
