--- a/raamatud.html
+++ b/raamatud.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <button id="themeSwitcher">tume režiim</button>
+  <button id="themeSwitcher">Tume režiim</button>
   <h1>TOP 10 Raamatut 2020-2024</h1>
   <h3><strong>Allpool on 10 kõige kõrgema hinnanguga raamatut vahemikus 2020-2024.</strong></h3>
 
