--- a/filmid.html
+++ b/filmid.html
@@ -235,7 +235,10 @@
             </tr>
         </table>
     </div>
+    <div class="lõpuosa">
+        <p>Veebiprojekt Bookflix</p>
+        <p>TÜ 2024</p>
+    </div>
     <script src="script.js"></script>
-    <br>
 </body>
 </html>
