--- a/raamatud.html
+++ b/raamatud.html
@@ -163,7 +163,12 @@ Kulub kolmsada aastat, enne kui ta satub juhtumisi ühte varjatud raamatupoodi j
           <p><strong>The StoryGraph:</strong> 4.23/5</p>
       </div>
   </section>
-
+  
+  <div class="lõpuosa">
+    <p>Veebiprojekt Bookflix</p>
+    <p>TÜ 2024</p>
+  </div>
+  
   <script src="raamatud.js"></script>
 </body>
 </html>
