--- a/raamatud.html
+++ b/raamatud.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="et">
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -168,7 +168,7 @@ Kulub kolmsada aastat, enne kui ta satub juhtumisi ühte varjatud raamatupoodi j
     <p>Veebiprojekt Bookflix</p>
     <p>TÜ 2024</p>
   </div>
-  
+
   <script src="raamatud.js"></script>
 </body>
 </html>
