--- a/raamatud.html
+++ b/raamatud.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-  <button id="themeSwitcher">Tume režiim</button>
+  <div class="header">
+    <a href="pealeht.html" class="home-button">
+        <img src="https://cdn.pixabay.com/photo/2014/04/03/00/41/house-309113_1280.png" alt="Home" class="home-icon">
+    </a>
+    <button id="themeSwitcher">Tume režiim</button>
+  </div>
   <h1>TOP 10 Raamatut 2020-2024</h1>
   <h3><strong>Allpool on 10 kõige kõrgema hinnanguga raamatut vahemikus 2020-2024.</strong></h3>
 
