pealehe nime muutmine

--- a/filmid.html
+++ b/filmid.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="header">
-        <a href="pealeht.html" class="home-button">
+        <a href="index.html" class="home-button">
             <img src="https://cdn.pixabay.com/photo/2014/04/03/00/41/house-309113_1280.png" alt="Home" class="home-icon">
         </a>
         <button id="themeSwitcher">Tume režiim</button>
